--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
    <button type="submit" value="normal" onclick="cambiarTamaño(this.value);">Original</button>
 
 
-<script src="changeSize.js"></script>
-<script src="parrafo.js"></script>
+<script src="./js/changeSize.js"></script>
+<script src="./js/parrafo.js"></script>
+<link rel="stylesheet" href="./css/style.css">
 
 </body>
 </html>
