--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
    <div id="contenedor"></div>
 
 
-   <button type="submit" value="grande" onclick="cambiarTamaño(this.value);">Agrandar</button>
-   <button type="submit" value="pequeno" onclick="cambiarTamaño(this.value);">Reducir</button>
-   <button type="submit" value="normal" onclick="cambiarTamaño(this.value);">Original</button>
+   <button type="submit" value="grande" onclick="CambiarTamaño(this.value);">Agrandar</button>
+   <button type="submit" value="pequeno" onclick="CambiarTamaño(this.value);">Reducir</button>
+   <button type="submit" value="normal" onclick="CambiarTamaño(this.value);">Original</button>
 
 
 <script src="./js/changeSize.js"></script>
