--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
 <body>
    <div id="contenedor"></div>
 
-
+<div id="tamaño">
    <button type="submit" value="grande" onclick="CambiarTamaño(this.value);">Agrandar</button>
    <button type="submit" value="pequeno" onclick="CambiarTamaño(this.value);">Reducir</button>
    <button type="submit" value="normal" onclick="CambiarTamaño(this.value);">Original</button>
+</div>
+   
+<div id="color">
+   <button type="submit" value="verde" onclick="CambiarColor(this.value);">Verde</button>
+   <button type="submit" value="rojo" onclick="CambiarColor(this.value);">Rojo</button>
+   <button type="submit" value="negro" onclick="CambiarColor(this.value);">Negro</button>
+</div>
 
 
 <script src="./js/changeSize.js"></script>
