--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </div>
    
 <div id="color">
-   <button type="submit" value="verde" onclick="CambiarColor(this.value);">Verde</button>
-   <button type="submit" value="rojo" onclick="CambiarColor(this.value);">Rojo</button>
-   <button type="submit" value="negro" onclick="CambiarColor(this.value);">Negro</button>
+   <button id="verde" type="submit" value="verde" onclick="CambiarColor(this.value);">Verde</button>
+   <button id="rojo" type="submit" value="rojo" onclick="CambiarColor(this.value);">Rojo</button>
+   <button id="negro" type="submit" value="negro" onclick="CambiarColor(this.value);">Negro</button>
 </div>
 
 
